# Host-Device_Array

./: .gitignore  CMakeLists.txt  README.md
scripts/: run_tests.sh
src/: array.h
src/util/: gpu.h
tests/: test_elementAccess.cu  test_initialization.cu  test_sync.cu
